Add sum and average
